src/objects/Apttus_Config2__ProductFootnote__c.object
<CustomObject>
    <description>Represents the footnote available in a product or option</description>
    <fields>
        <fullName>Apttus_Config2__FootnoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated footnote</description>
        <inlineHelpText>ID of the associated footnote</inlineHelpText>
        <label>Footnote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__Footnote__c.Apttus_Config2__Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__Footnote__c</referenceTo>
        <relationshipLabel>Product Footnotes</relationshipLabel>
        <relationshipName>ProductFootnotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product/option associated with the footnote</description>
        <inlineHelpText>ID of the product/option associated with the footnote</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Footnotes</relationshipLabel>
        <relationshipName>ProductFootnotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The footnote display sequence</description>
        <inlineHelpText>The footnote display sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The type of footnote</description>
        <inlineHelpText>The type of footnote</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disclaimer</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Footnote</label>
    <nameField>
        <displayFormat>PF-{000000}</displayFormat>
        <label>Footnote Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Footnotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>